--- a/index.html
+++ b/index.html
@@ -10,92 +10,87 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <script src="./Assets/js/script.js" defer></script>
-  <link rel="stylesheet" href="./Assets/css/style.css" />
   <link rel="stylesheet" href="./Assets/css/reset.css" />
+  <link rel="stylesheet" href="./Assets/css/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
 <body>
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
-    <!-- <p class="lead">A simple calendar app for scheduling your work day</p> -->
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
-    <!-- Timeblocks go here -->
-
-    <div class="input-group">
-      <div class="input-group-prepend" id="8">
+    <div class="input-group" id="8">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block"> 8:00am</span>
       </div>
       <textarea id="t8:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn8">Save Icon</button>
     </div>  
-    <div class="input-group">
-      <div class="input-group-prepend" id="9">
+    <div class="input-group" id="9">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block"> 9:00am</span>
       </div>
       <textarea id="t9:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn9">Save Icon</button>
     </div>    
-    <div class="input-group">
-      <div class="input-group-prepend" id="10">
+    <div class="input-group" id="10">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">10:00am</span>
       </div>
       <textarea id="t10:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn10">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="11">
+    <div class="input-group" id="11">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">11:00am</span>
       </div>
       <textarea id="t11:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn11">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="12">
+    <div class="input-group" id="12" >
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">12:00pm</span>
       </div>
       <textarea id="t12:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn12">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="13">
+    <div class="input-group" id="13">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">1:00pm</span>
       </div>
       <textarea id="t1:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn13">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="14">
+    <div class="input-group" id="14">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">2:00pm</span>
       </div>
       <textarea id="t2:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn14">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="15">
+    <div class="input-group" id="15">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">3:00pm</span>
       </div>
       <textarea id="t3:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn15">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="16">
+    <div class="input-group" id="16">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">4:00pm</span>
       </div>
       <textarea id="t4:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn16">Save Icon</button>
     </div>
-    <div class="input-group">
-      <div class="input-group-prepend" id="17">
+    <div class="input-group" id="17">
+      <div class="input-group-prepend">
         <span class="input-group-text time-block">5:00pm</span>
       </div>
       <textarea id="t5:00" aria-label="with textarea" class="form-control"></textarea>
       <button class="btn saveBtn" type="button" id="btn17">Save Icon</button>
     </div>
-
-
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
